parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> vars
Rule 1     vars -> S
Rule 2     vars -> vars S
Rule 3     S -> comands
Rule 4     S -> procedimentos
Rule 5     S -> v
Rule 6     S -> call_procedimentos
Rule 7     comands -> DISCARD table
Rule 8     comands -> LOAD table
Rule 9     comands -> SAVE table
Rule 10    comands -> SHOW table
Rule 11    comands -> SELECT select
Rule 12    comands -> CREATE table
Rule 13    table -> TABLE var ;
Rule 14    table -> TABLE var from
Rule 15    table -> TABLE var as
Rule 16    select -> * from
Rule 17    select -> a_list from
Rule 18    a_list -> var
Rule 19    a_list -> a_list , var
Rule 20    as -> AS string ;
Rule 21    v -> var
Rule 22    from -> FROM var ;
Rule 23    from -> FROM var where
Rule 24    from -> FROM comands
Rule 25    from -> FROM var join
Rule 26    from -> FROM string ;
Rule 27    from -> FROM var limit
Rule 28    limit -> LIMIT nr ;
Rule 29    join -> JOIN var using
Rule 30    using -> USING ( var = nr ) ;
Rule 31    using -> USING ( var = string ) ;
Rule 32    where -> WHERE operadores
Rule 33    operadores -> var = nr rec
Rule 34    operadores -> var = string rec
Rule 35    operadores -> var < > nr rec
Rule 36    operadores -> var < > string rec
Rule 37    operadores -> var < nr rec
Rule 38    operadores -> var > nr rec
Rule 39    operadores -> var < = nr rec
Rule 40    operadores -> var > = nr rec
Rule 41    rec -> ;
Rule 42    rec -> AND operadores
Rule 43    rec -> limit
Rule 44    procedimentos -> PROCEDURE var DO list_com END
Rule 45    list_com -> comands
Rule 46    list_com -> list_com comands
Rule 47    call_procedimentos -> CALL var ;

Terminals, with rules where they appear

(                    : 30 31
)                    : 30 31
*                    : 16
,                    : 19
;                    : 13 20 22 26 28 30 31 41 47
<                    : 35 36 37 39
=                    : 30 31 33 34 39 40
>                    : 35 36 38 40
AND                  : 42
AS                   : 20
CALL                 : 47
CREATE               : 12
DISCARD              : 7
DO                   : 44
END                  : 44
FROM                 : 22 23 24 25 26 27
JOIN                 : 29
LIMIT                : 28
LOAD                 : 8
PROCEDURE            : 44
SAVE                 : 9
SELECT               : 11
SHOW                 : 10
TABLE                : 13 14 15
USING                : 30 31
WHERE                : 32
error                : 
nr                   : 28 30 33 35 37 38 39 40
string               : 20 26 31 34 36
var                  : 13 14 15 18 19 21 22 23 25 27 29 30 31 33 34 35 36 37 38 39 40 44 47

Nonterminals, with rules where they appear

S                    : 1 2
a_list               : 17 19
as                   : 15
call_procedimentos   : 6
comands              : 3 24 45 46
from                 : 14 16 17
join                 : 25
limit                : 27 43
list_com             : 44 46
operadores           : 32 42
procedimentos        : 4
rec                  : 33 34 35 36 37 38 39 40
select               : 11
table                : 7 8 9 10 12
using                : 29
v                    : 5
vars                 : 2 0
where                : 23

Parsing method: LALR

state 0

    (0) S' -> . vars
    (1) vars -> . S
    (2) vars -> . vars S
    (3) S -> . comands
    (4) S -> . procedimentos
    (5) S -> . v
    (6) S -> . call_procedimentos
    (7) comands -> . DISCARD table
    (8) comands -> . LOAD table
    (9) comands -> . SAVE table
    (10) comands -> . SHOW table
    (11) comands -> . SELECT select
    (12) comands -> . CREATE table
    (44) procedimentos -> . PROCEDURE var DO list_com END
    (21) v -> . var
    (47) call_procedimentos -> . CALL var ;

    DISCARD         shift and go to state 7
    LOAD            shift and go to state 8
    SAVE            shift and go to state 9
    SHOW            shift and go to state 10
    SELECT          shift and go to state 11
    CREATE          shift and go to state 12
    PROCEDURE       shift and go to state 13
    var             shift and go to state 14
    CALL            shift and go to state 15

    vars                           shift and go to state 1
    S                              shift and go to state 2
    comands                        shift and go to state 3
    procedimentos                  shift and go to state 4
    v                              shift and go to state 5
    call_procedimentos             shift and go to state 6

state 1

    (0) S' -> vars .
    (2) vars -> vars . S
    (3) S -> . comands
    (4) S -> . procedimentos
    (5) S -> . v
    (6) S -> . call_procedimentos
    (7) comands -> . DISCARD table
    (8) comands -> . LOAD table
    (9) comands -> . SAVE table
    (10) comands -> . SHOW table
    (11) comands -> . SELECT select
    (12) comands -> . CREATE table
    (44) procedimentos -> . PROCEDURE var DO list_com END
    (21) v -> . var
    (47) call_procedimentos -> . CALL var ;

    DISCARD         shift and go to state 7
    LOAD            shift and go to state 8
    SAVE            shift and go to state 9
    SHOW            shift and go to state 10
    SELECT          shift and go to state 11
    CREATE          shift and go to state 12
    PROCEDURE       shift and go to state 13
    var             shift and go to state 14
    CALL            shift and go to state 15

    S                              shift and go to state 16
    comands                        shift and go to state 3
    procedimentos                  shift and go to state 4
    v                              shift and go to state 5
    call_procedimentos             shift and go to state 6

state 2

    (1) vars -> S .

    DISCARD         reduce using rule 1 (vars -> S .)
    LOAD            reduce using rule 1 (vars -> S .)
    SAVE            reduce using rule 1 (vars -> S .)
    SHOW            reduce using rule 1 (vars -> S .)
    SELECT          reduce using rule 1 (vars -> S .)
    CREATE          reduce using rule 1 (vars -> S .)
    PROCEDURE       reduce using rule 1 (vars -> S .)
    var             reduce using rule 1 (vars -> S .)
    CALL            reduce using rule 1 (vars -> S .)
    $end            reduce using rule 1 (vars -> S .)


state 3

    (3) S -> comands .

    DISCARD         reduce using rule 3 (S -> comands .)
    LOAD            reduce using rule 3 (S -> comands .)
    SAVE            reduce using rule 3 (S -> comands .)
    SHOW            reduce using rule 3 (S -> comands .)
    SELECT          reduce using rule 3 (S -> comands .)
    CREATE          reduce using rule 3 (S -> comands .)
    PROCEDURE       reduce using rule 3 (S -> comands .)
    var             reduce using rule 3 (S -> comands .)
    CALL            reduce using rule 3 (S -> comands .)
    $end            reduce using rule 3 (S -> comands .)


state 4

    (4) S -> procedimentos .

    DISCARD         reduce using rule 4 (S -> procedimentos .)
    LOAD            reduce using rule 4 (S -> procedimentos .)
    SAVE            reduce using rule 4 (S -> procedimentos .)
    SHOW            reduce using rule 4 (S -> procedimentos .)
    SELECT          reduce using rule 4 (S -> procedimentos .)
    CREATE          reduce using rule 4 (S -> procedimentos .)
    PROCEDURE       reduce using rule 4 (S -> procedimentos .)
    var             reduce using rule 4 (S -> procedimentos .)
    CALL            reduce using rule 4 (S -> procedimentos .)
    $end            reduce using rule 4 (S -> procedimentos .)


state 5

    (5) S -> v .

    DISCARD         reduce using rule 5 (S -> v .)
    LOAD            reduce using rule 5 (S -> v .)
    SAVE            reduce using rule 5 (S -> v .)
    SHOW            reduce using rule 5 (S -> v .)
    SELECT          reduce using rule 5 (S -> v .)
    CREATE          reduce using rule 5 (S -> v .)
    PROCEDURE       reduce using rule 5 (S -> v .)
    var             reduce using rule 5 (S -> v .)
    CALL            reduce using rule 5 (S -> v .)
    $end            reduce using rule 5 (S -> v .)


state 6

    (6) S -> call_procedimentos .

    DISCARD         reduce using rule 6 (S -> call_procedimentos .)
    LOAD            reduce using rule 6 (S -> call_procedimentos .)
    SAVE            reduce using rule 6 (S -> call_procedimentos .)
    SHOW            reduce using rule 6 (S -> call_procedimentos .)
    SELECT          reduce using rule 6 (S -> call_procedimentos .)
    CREATE          reduce using rule 6 (S -> call_procedimentos .)
    PROCEDURE       reduce using rule 6 (S -> call_procedimentos .)
    var             reduce using rule 6 (S -> call_procedimentos .)
    CALL            reduce using rule 6 (S -> call_procedimentos .)
    $end            reduce using rule 6 (S -> call_procedimentos .)


state 7

    (7) comands -> DISCARD . table
    (13) table -> . TABLE var ;
    (14) table -> . TABLE var from
    (15) table -> . TABLE var as

    TABLE           shift and go to state 18

    table                          shift and go to state 17

state 8

    (8) comands -> LOAD . table
    (13) table -> . TABLE var ;
    (14) table -> . TABLE var from
    (15) table -> . TABLE var as

    TABLE           shift and go to state 18

    table                          shift and go to state 19

state 9

    (9) comands -> SAVE . table
    (13) table -> . TABLE var ;
    (14) table -> . TABLE var from
    (15) table -> . TABLE var as

    TABLE           shift and go to state 18

    table                          shift and go to state 20

state 10

    (10) comands -> SHOW . table
    (13) table -> . TABLE var ;
    (14) table -> . TABLE var from
    (15) table -> . TABLE var as

    TABLE           shift and go to state 18

    table                          shift and go to state 21

state 11

    (11) comands -> SELECT . select
    (16) select -> . * from
    (17) select -> . a_list from
    (18) a_list -> . var
    (19) a_list -> . a_list , var

    *               shift and go to state 23
    var             shift and go to state 25

    select                         shift and go to state 22
    a_list                         shift and go to state 24

state 12

    (12) comands -> CREATE . table
    (13) table -> . TABLE var ;
    (14) table -> . TABLE var from
    (15) table -> . TABLE var as

    TABLE           shift and go to state 18

    table                          shift and go to state 26

state 13

    (44) procedimentos -> PROCEDURE . var DO list_com END

    var             shift and go to state 27


state 14

    (21) v -> var .

    DISCARD         reduce using rule 21 (v -> var .)
    LOAD            reduce using rule 21 (v -> var .)
    SAVE            reduce using rule 21 (v -> var .)
    SHOW            reduce using rule 21 (v -> var .)
    SELECT          reduce using rule 21 (v -> var .)
    CREATE          reduce using rule 21 (v -> var .)
    PROCEDURE       reduce using rule 21 (v -> var .)
    var             reduce using rule 21 (v -> var .)
    CALL            reduce using rule 21 (v -> var .)
    $end            reduce using rule 21 (v -> var .)


state 15

    (47) call_procedimentos -> CALL . var ;

    var             shift and go to state 28


state 16

    (2) vars -> vars S .

    DISCARD         reduce using rule 2 (vars -> vars S .)
    LOAD            reduce using rule 2 (vars -> vars S .)
    SAVE            reduce using rule 2 (vars -> vars S .)
    SHOW            reduce using rule 2 (vars -> vars S .)
    SELECT          reduce using rule 2 (vars -> vars S .)
    CREATE          reduce using rule 2 (vars -> vars S .)
    PROCEDURE       reduce using rule 2 (vars -> vars S .)
    var             reduce using rule 2 (vars -> vars S .)
    CALL            reduce using rule 2 (vars -> vars S .)
    $end            reduce using rule 2 (vars -> vars S .)


state 17

    (7) comands -> DISCARD table .

    DISCARD         reduce using rule 7 (comands -> DISCARD table .)
    LOAD            reduce using rule 7 (comands -> DISCARD table .)
    SAVE            reduce using rule 7 (comands -> DISCARD table .)
    SHOW            reduce using rule 7 (comands -> DISCARD table .)
    SELECT          reduce using rule 7 (comands -> DISCARD table .)
    CREATE          reduce using rule 7 (comands -> DISCARD table .)
    PROCEDURE       reduce using rule 7 (comands -> DISCARD table .)
    var             reduce using rule 7 (comands -> DISCARD table .)
    CALL            reduce using rule 7 (comands -> DISCARD table .)
    $end            reduce using rule 7 (comands -> DISCARD table .)
    END             reduce using rule 7 (comands -> DISCARD table .)


state 18

    (13) table -> TABLE . var ;
    (14) table -> TABLE . var from
    (15) table -> TABLE . var as

    var             shift and go to state 29


state 19

    (8) comands -> LOAD table .

    DISCARD         reduce using rule 8 (comands -> LOAD table .)
    LOAD            reduce using rule 8 (comands -> LOAD table .)
    SAVE            reduce using rule 8 (comands -> LOAD table .)
    SHOW            reduce using rule 8 (comands -> LOAD table .)
    SELECT          reduce using rule 8 (comands -> LOAD table .)
    CREATE          reduce using rule 8 (comands -> LOAD table .)
    PROCEDURE       reduce using rule 8 (comands -> LOAD table .)
    var             reduce using rule 8 (comands -> LOAD table .)
    CALL            reduce using rule 8 (comands -> LOAD table .)
    $end            reduce using rule 8 (comands -> LOAD table .)
    END             reduce using rule 8 (comands -> LOAD table .)


state 20

    (9) comands -> SAVE table .

    DISCARD         reduce using rule 9 (comands -> SAVE table .)
    LOAD            reduce using rule 9 (comands -> SAVE table .)
    SAVE            reduce using rule 9 (comands -> SAVE table .)
    SHOW            reduce using rule 9 (comands -> SAVE table .)
    SELECT          reduce using rule 9 (comands -> SAVE table .)
    CREATE          reduce using rule 9 (comands -> SAVE table .)
    PROCEDURE       reduce using rule 9 (comands -> SAVE table .)
    var             reduce using rule 9 (comands -> SAVE table .)
    CALL            reduce using rule 9 (comands -> SAVE table .)
    $end            reduce using rule 9 (comands -> SAVE table .)
    END             reduce using rule 9 (comands -> SAVE table .)


state 21

    (10) comands -> SHOW table .

    DISCARD         reduce using rule 10 (comands -> SHOW table .)
    LOAD            reduce using rule 10 (comands -> SHOW table .)
    SAVE            reduce using rule 10 (comands -> SHOW table .)
    SHOW            reduce using rule 10 (comands -> SHOW table .)
    SELECT          reduce using rule 10 (comands -> SHOW table .)
    CREATE          reduce using rule 10 (comands -> SHOW table .)
    PROCEDURE       reduce using rule 10 (comands -> SHOW table .)
    var             reduce using rule 10 (comands -> SHOW table .)
    CALL            reduce using rule 10 (comands -> SHOW table .)
    $end            reduce using rule 10 (comands -> SHOW table .)
    END             reduce using rule 10 (comands -> SHOW table .)


state 22

    (11) comands -> SELECT select .

    DISCARD         reduce using rule 11 (comands -> SELECT select .)
    LOAD            reduce using rule 11 (comands -> SELECT select .)
    SAVE            reduce using rule 11 (comands -> SELECT select .)
    SHOW            reduce using rule 11 (comands -> SELECT select .)
    SELECT          reduce using rule 11 (comands -> SELECT select .)
    CREATE          reduce using rule 11 (comands -> SELECT select .)
    PROCEDURE       reduce using rule 11 (comands -> SELECT select .)
    var             reduce using rule 11 (comands -> SELECT select .)
    CALL            reduce using rule 11 (comands -> SELECT select .)
    $end            reduce using rule 11 (comands -> SELECT select .)
    END             reduce using rule 11 (comands -> SELECT select .)


state 23

    (16) select -> * . from
    (22) from -> . FROM var ;
    (23) from -> . FROM var where
    (24) from -> . FROM comands
    (25) from -> . FROM var join
    (26) from -> . FROM string ;
    (27) from -> . FROM var limit

    FROM            shift and go to state 31

    from                           shift and go to state 30

state 24

    (17) select -> a_list . from
    (19) a_list -> a_list . , var
    (22) from -> . FROM var ;
    (23) from -> . FROM var where
    (24) from -> . FROM comands
    (25) from -> . FROM var join
    (26) from -> . FROM string ;
    (27) from -> . FROM var limit

    ,               shift and go to state 33
    FROM            shift and go to state 31

    from                           shift and go to state 32

state 25

    (18) a_list -> var .

    ,               reduce using rule 18 (a_list -> var .)
    FROM            reduce using rule 18 (a_list -> var .)


state 26

    (12) comands -> CREATE table .

    DISCARD         reduce using rule 12 (comands -> CREATE table .)
    LOAD            reduce using rule 12 (comands -> CREATE table .)
    SAVE            reduce using rule 12 (comands -> CREATE table .)
    SHOW            reduce using rule 12 (comands -> CREATE table .)
    SELECT          reduce using rule 12 (comands -> CREATE table .)
    CREATE          reduce using rule 12 (comands -> CREATE table .)
    PROCEDURE       reduce using rule 12 (comands -> CREATE table .)
    var             reduce using rule 12 (comands -> CREATE table .)
    CALL            reduce using rule 12 (comands -> CREATE table .)
    $end            reduce using rule 12 (comands -> CREATE table .)
    END             reduce using rule 12 (comands -> CREATE table .)


state 27

    (44) procedimentos -> PROCEDURE var . DO list_com END

    DO              shift and go to state 34


state 28

    (47) call_procedimentos -> CALL var . ;

    ;               shift and go to state 35


state 29

    (13) table -> TABLE var . ;
    (14) table -> TABLE var . from
    (15) table -> TABLE var . as
    (22) from -> . FROM var ;
    (23) from -> . FROM var where
    (24) from -> . FROM comands
    (25) from -> . FROM var join
    (26) from -> . FROM string ;
    (27) from -> . FROM var limit
    (20) as -> . AS string ;

    ;               shift and go to state 36
    FROM            shift and go to state 31
    AS              shift and go to state 39

    from                           shift and go to state 37
    as                             shift and go to state 38

state 30

    (16) select -> * from .

    DISCARD         reduce using rule 16 (select -> * from .)
    LOAD            reduce using rule 16 (select -> * from .)
    SAVE            reduce using rule 16 (select -> * from .)
    SHOW            reduce using rule 16 (select -> * from .)
    SELECT          reduce using rule 16 (select -> * from .)
    CREATE          reduce using rule 16 (select -> * from .)
    PROCEDURE       reduce using rule 16 (select -> * from .)
    var             reduce using rule 16 (select -> * from .)
    CALL            reduce using rule 16 (select -> * from .)
    $end            reduce using rule 16 (select -> * from .)
    END             reduce using rule 16 (select -> * from .)


state 31

    (22) from -> FROM . var ;
    (23) from -> FROM . var where
    (24) from -> FROM . comands
    (25) from -> FROM . var join
    (26) from -> FROM . string ;
    (27) from -> FROM . var limit
    (7) comands -> . DISCARD table
    (8) comands -> . LOAD table
    (9) comands -> . SAVE table
    (10) comands -> . SHOW table
    (11) comands -> . SELECT select
    (12) comands -> . CREATE table

    var             shift and go to state 40
    string          shift and go to state 42
    DISCARD         shift and go to state 7
    LOAD            shift and go to state 8
    SAVE            shift and go to state 9
    SHOW            shift and go to state 10
    SELECT          shift and go to state 11
    CREATE          shift and go to state 12

    comands                        shift and go to state 41

state 32

    (17) select -> a_list from .

    DISCARD         reduce using rule 17 (select -> a_list from .)
    LOAD            reduce using rule 17 (select -> a_list from .)
    SAVE            reduce using rule 17 (select -> a_list from .)
    SHOW            reduce using rule 17 (select -> a_list from .)
    SELECT          reduce using rule 17 (select -> a_list from .)
    CREATE          reduce using rule 17 (select -> a_list from .)
    PROCEDURE       reduce using rule 17 (select -> a_list from .)
    var             reduce using rule 17 (select -> a_list from .)
    CALL            reduce using rule 17 (select -> a_list from .)
    $end            reduce using rule 17 (select -> a_list from .)
    END             reduce using rule 17 (select -> a_list from .)


state 33

    (19) a_list -> a_list , . var

    var             shift and go to state 43


state 34

    (44) procedimentos -> PROCEDURE var DO . list_com END
    (45) list_com -> . comands
    (46) list_com -> . list_com comands
    (7) comands -> . DISCARD table
    (8) comands -> . LOAD table
    (9) comands -> . SAVE table
    (10) comands -> . SHOW table
    (11) comands -> . SELECT select
    (12) comands -> . CREATE table

    DISCARD         shift and go to state 7
    LOAD            shift and go to state 8
    SAVE            shift and go to state 9
    SHOW            shift and go to state 10
    SELECT          shift and go to state 11
    CREATE          shift and go to state 12

    list_com                       shift and go to state 44
    comands                        shift and go to state 45

state 35

    (47) call_procedimentos -> CALL var ; .

    DISCARD         reduce using rule 47 (call_procedimentos -> CALL var ; .)
    LOAD            reduce using rule 47 (call_procedimentos -> CALL var ; .)
    SAVE            reduce using rule 47 (call_procedimentos -> CALL var ; .)
    SHOW            reduce using rule 47 (call_procedimentos -> CALL var ; .)
    SELECT          reduce using rule 47 (call_procedimentos -> CALL var ; .)
    CREATE          reduce using rule 47 (call_procedimentos -> CALL var ; .)
    PROCEDURE       reduce using rule 47 (call_procedimentos -> CALL var ; .)
    var             reduce using rule 47 (call_procedimentos -> CALL var ; .)
    CALL            reduce using rule 47 (call_procedimentos -> CALL var ; .)
    $end            reduce using rule 47 (call_procedimentos -> CALL var ; .)


state 36

    (13) table -> TABLE var ; .

    DISCARD         reduce using rule 13 (table -> TABLE var ; .)
    LOAD            reduce using rule 13 (table -> TABLE var ; .)
    SAVE            reduce using rule 13 (table -> TABLE var ; .)
    SHOW            reduce using rule 13 (table -> TABLE var ; .)
    SELECT          reduce using rule 13 (table -> TABLE var ; .)
    CREATE          reduce using rule 13 (table -> TABLE var ; .)
    PROCEDURE       reduce using rule 13 (table -> TABLE var ; .)
    var             reduce using rule 13 (table -> TABLE var ; .)
    CALL            reduce using rule 13 (table -> TABLE var ; .)
    $end            reduce using rule 13 (table -> TABLE var ; .)
    END             reduce using rule 13 (table -> TABLE var ; .)


state 37

    (14) table -> TABLE var from .

    DISCARD         reduce using rule 14 (table -> TABLE var from .)
    LOAD            reduce using rule 14 (table -> TABLE var from .)
    SAVE            reduce using rule 14 (table -> TABLE var from .)
    SHOW            reduce using rule 14 (table -> TABLE var from .)
    SELECT          reduce using rule 14 (table -> TABLE var from .)
    CREATE          reduce using rule 14 (table -> TABLE var from .)
    PROCEDURE       reduce using rule 14 (table -> TABLE var from .)
    var             reduce using rule 14 (table -> TABLE var from .)
    CALL            reduce using rule 14 (table -> TABLE var from .)
    $end            reduce using rule 14 (table -> TABLE var from .)
    END             reduce using rule 14 (table -> TABLE var from .)


state 38

    (15) table -> TABLE var as .

    DISCARD         reduce using rule 15 (table -> TABLE var as .)
    LOAD            reduce using rule 15 (table -> TABLE var as .)
    SAVE            reduce using rule 15 (table -> TABLE var as .)
    SHOW            reduce using rule 15 (table -> TABLE var as .)
    SELECT          reduce using rule 15 (table -> TABLE var as .)
    CREATE          reduce using rule 15 (table -> TABLE var as .)
    PROCEDURE       reduce using rule 15 (table -> TABLE var as .)
    var             reduce using rule 15 (table -> TABLE var as .)
    CALL            reduce using rule 15 (table -> TABLE var as .)
    $end            reduce using rule 15 (table -> TABLE var as .)
    END             reduce using rule 15 (table -> TABLE var as .)


state 39

    (20) as -> AS . string ;

    string          shift and go to state 46


state 40

    (22) from -> FROM var . ;
    (23) from -> FROM var . where
    (25) from -> FROM var . join
    (27) from -> FROM var . limit
    (32) where -> . WHERE operadores
    (29) join -> . JOIN var using
    (28) limit -> . LIMIT nr ;

    ;               shift and go to state 47
    WHERE           shift and go to state 51
    JOIN            shift and go to state 52
    LIMIT           shift and go to state 53

    where                          shift and go to state 48
    join                           shift and go to state 49
    limit                          shift and go to state 50

state 41

    (24) from -> FROM comands .

    DISCARD         reduce using rule 24 (from -> FROM comands .)
    LOAD            reduce using rule 24 (from -> FROM comands .)
    SAVE            reduce using rule 24 (from -> FROM comands .)
    SHOW            reduce using rule 24 (from -> FROM comands .)
    SELECT          reduce using rule 24 (from -> FROM comands .)
    CREATE          reduce using rule 24 (from -> FROM comands .)
    PROCEDURE       reduce using rule 24 (from -> FROM comands .)
    var             reduce using rule 24 (from -> FROM comands .)
    CALL            reduce using rule 24 (from -> FROM comands .)
    $end            reduce using rule 24 (from -> FROM comands .)
    END             reduce using rule 24 (from -> FROM comands .)


state 42

    (26) from -> FROM string . ;

    ;               shift and go to state 54


state 43

    (19) a_list -> a_list , var .

    ,               reduce using rule 19 (a_list -> a_list , var .)
    FROM            reduce using rule 19 (a_list -> a_list , var .)


state 44

    (44) procedimentos -> PROCEDURE var DO list_com . END
    (46) list_com -> list_com . comands
    (7) comands -> . DISCARD table
    (8) comands -> . LOAD table
    (9) comands -> . SAVE table
    (10) comands -> . SHOW table
    (11) comands -> . SELECT select
    (12) comands -> . CREATE table

    END             shift and go to state 55
    DISCARD         shift and go to state 7
    LOAD            shift and go to state 8
    SAVE            shift and go to state 9
    SHOW            shift and go to state 10
    SELECT          shift and go to state 11
    CREATE          shift and go to state 12

    comands                        shift and go to state 56

state 45

    (45) list_com -> comands .

    END             reduce using rule 45 (list_com -> comands .)
    DISCARD         reduce using rule 45 (list_com -> comands .)
    LOAD            reduce using rule 45 (list_com -> comands .)
    SAVE            reduce using rule 45 (list_com -> comands .)
    SHOW            reduce using rule 45 (list_com -> comands .)
    SELECT          reduce using rule 45 (list_com -> comands .)
    CREATE          reduce using rule 45 (list_com -> comands .)


state 46

    (20) as -> AS string . ;

    ;               shift and go to state 57


state 47

    (22) from -> FROM var ; .

    DISCARD         reduce using rule 22 (from -> FROM var ; .)
    LOAD            reduce using rule 22 (from -> FROM var ; .)
    SAVE            reduce using rule 22 (from -> FROM var ; .)
    SHOW            reduce using rule 22 (from -> FROM var ; .)
    SELECT          reduce using rule 22 (from -> FROM var ; .)
    CREATE          reduce using rule 22 (from -> FROM var ; .)
    PROCEDURE       reduce using rule 22 (from -> FROM var ; .)
    var             reduce using rule 22 (from -> FROM var ; .)
    CALL            reduce using rule 22 (from -> FROM var ; .)
    $end            reduce using rule 22 (from -> FROM var ; .)
    END             reduce using rule 22 (from -> FROM var ; .)


state 48

    (23) from -> FROM var where .

    DISCARD         reduce using rule 23 (from -> FROM var where .)
    LOAD            reduce using rule 23 (from -> FROM var where .)
    SAVE            reduce using rule 23 (from -> FROM var where .)
    SHOW            reduce using rule 23 (from -> FROM var where .)
    SELECT          reduce using rule 23 (from -> FROM var where .)
    CREATE          reduce using rule 23 (from -> FROM var where .)
    PROCEDURE       reduce using rule 23 (from -> FROM var where .)
    var             reduce using rule 23 (from -> FROM var where .)
    CALL            reduce using rule 23 (from -> FROM var where .)
    $end            reduce using rule 23 (from -> FROM var where .)
    END             reduce using rule 23 (from -> FROM var where .)


state 49

    (25) from -> FROM var join .

    DISCARD         reduce using rule 25 (from -> FROM var join .)
    LOAD            reduce using rule 25 (from -> FROM var join .)
    SAVE            reduce using rule 25 (from -> FROM var join .)
    SHOW            reduce using rule 25 (from -> FROM var join .)
    SELECT          reduce using rule 25 (from -> FROM var join .)
    CREATE          reduce using rule 25 (from -> FROM var join .)
    PROCEDURE       reduce using rule 25 (from -> FROM var join .)
    var             reduce using rule 25 (from -> FROM var join .)
    CALL            reduce using rule 25 (from -> FROM var join .)
    $end            reduce using rule 25 (from -> FROM var join .)
    END             reduce using rule 25 (from -> FROM var join .)


state 50

    (27) from -> FROM var limit .

    DISCARD         reduce using rule 27 (from -> FROM var limit .)
    LOAD            reduce using rule 27 (from -> FROM var limit .)
    SAVE            reduce using rule 27 (from -> FROM var limit .)
    SHOW            reduce using rule 27 (from -> FROM var limit .)
    SELECT          reduce using rule 27 (from -> FROM var limit .)
    CREATE          reduce using rule 27 (from -> FROM var limit .)
    PROCEDURE       reduce using rule 27 (from -> FROM var limit .)
    var             reduce using rule 27 (from -> FROM var limit .)
    CALL            reduce using rule 27 (from -> FROM var limit .)
    $end            reduce using rule 27 (from -> FROM var limit .)
    END             reduce using rule 27 (from -> FROM var limit .)


state 51

    (32) where -> WHERE . operadores
    (33) operadores -> . var = nr rec
    (34) operadores -> . var = string rec
    (35) operadores -> . var < > nr rec
    (36) operadores -> . var < > string rec
    (37) operadores -> . var < nr rec
    (38) operadores -> . var > nr rec
    (39) operadores -> . var < = nr rec
    (40) operadores -> . var > = nr rec

    var             shift and go to state 59

    operadores                     shift and go to state 58

state 52

    (29) join -> JOIN . var using

    var             shift and go to state 60


state 53

    (28) limit -> LIMIT . nr ;

    nr              shift and go to state 61


state 54

    (26) from -> FROM string ; .
